# Arqui

./: CMakeLists.txt
Util_vista/Final/: Final.workspace  Makefile
Util_vista/Final/.codelite/: Final.session
Util_vista/Final/FINAL/: FINAL.mk  FINAL.project  FINAL.txt  FrmMain.cpp  FrmMain.h  main.cpp  registrar.glade  registrar.glade~
Util_vista/Final/FINAL/Debug/: FINAL  FrmMain.cpp.o.d  main.cpp.o.d  mainwindow.cpp.o.d
Version1/arqui.controlador/: main.cpp
Version1/arqui.modelo/usuario/: Usuario.cpp  Usuario.h
Version1/arqui.vista/: IServicios.h  Vista.h
Version2/: Makefile  MiTienda.workspace
Version2/.codelite/: MiTienda.session  refactoring.db
Version2/Almacen/: Almacen.mk  Almacen.project  Almacen.txt
Version2/Almacen/Debug/: Almacen  src_controlador_Controlador.cpp.o.d  src_controlador_Main.cpp.o.d  src_modelo_producto_Producto.cpp.o.d  src_modelo_usuario_Usuario.cpp.o.d  src_modelo_usuario_UsuarioDao.cpp.o.d  src_vista_Login.cpp.o.d
Version2/Almacen/src/controlador/: Controlador.cpp  Controlador.h  Main.cpp
Version2/Almacen/src/modelo/producto/: Producto.cpp  Producto.h
Version2/Almacen/src/modelo/usuario/: Usuario.cpp  Usuario.h  UsuarioDao.cpp  tablaUsuario.csv
Version2/Almacen/src/vista/: Login.cpp
Version2/Tienda/: Tienda.mk  Tienda.project
Version2/Tienda/Debug/: up_up_up_Downloads_Arqui-master_arqui.controlador_Controlador.cpp.o.d  up_up_up_Downloads_Arqui-master_arqui.controlador_main.cpp.o.d
arqui.controlador/: Controlador.cpp  Controlador.h
